# wormhole-pie

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-installers.yml  quality.yml
assets/blender/: wormhole-pets.blend
docs/: ARCHITECTURE.md  PRODUCT_VISION.md
public/pets/pai/: actions.json  pets.json  state-machine.json
src/: App.tsx  dialogueSessions.ts  i18n.ts  petProfile.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentManagerPanel.tsx  AssistantDock.tsx  Drawers.tsx  FileWorkspace.tsx  HomeSectionRail.tsx  IdeasPanel.tsx  MinimalDialogue.tsx  Navigation.tsx  SocialActions.tsx  TodoPanel.tsx  WormholeTransition.tsx
src/data/: mockData.ts
src/hooks/: usePersistentState.ts
src/lib/: desktop.ts  format.ts
src/pet/: PetSprite.tsx  blenderMotionMap.json  petBehaviorRuntime.ts  petBehaviorTypes.ts  petManifest.ts
tools/blender/: README.md  generate_pet_models.py  inspect_pet_blend.py  validate_pet_renders.py
