[package]
name = "wormhole-pie"
version = "0.1.0"
description = "Wormhole Pie - a local-first cross-platform desktop Agent Pet"
authors = ["Wormhole Pie"]
edition = "2021"

[lib]
name = "wormhole_pie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8"
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
trash = "5"
