[package]
name = "wormhole-pie"
version = "0.3.0"
description = "Wormhole Pie - a local-first cross-platform desktop Agent Pet"
authors = ["Wormhole Pie"]
edition = "2021"

[lib]
name = "wormhole_pie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8"
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
trash = "5"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
